# metricbench

./: .gitignore  README.md  config.yaml  pyproject.toml
benchmark/: generate_queries.py  run_benchmark.py
benchmark/engines/: __init__.py  duckdb.py  postgres.py
configs/: experiments.yaml  metrics.yaml
data/: generate_data.py  load_data.py
docs/: WALKTHROUGH.md
schemas/duckdb/: preagg_tables.sql  raw_tables.sql
schemas/postgres/: preagg_sketches_tdigest.sql  preagg_tables.sql  raw_tables.sql
templates/ondemand/: metric.sql.j2  units.sql.j2
templates/preagg/: metric.sql.j2  units.sql.j2
